<?xml version="1.0"?>
<package format="3">
  <name>rosmon2</name>
  <version>0.1.0</version>
  <description>A rosmon-style terminal launcher and process monitor for ROS 2.</description>
  <maintainer email="student@example.com">rosmon2 maintainers</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
